test/bad/generics/method01.px

class A def
    func f<T>() def
        return
